# wasm-sandbox

./: API.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NEW_FEATURES.md  README.md  TRAIT_DESIGN.md  WASMER_IMPLEMENTATION.md
.github/: copilot-instructions.md
benches/: communication.rs  startup.rs  startup_fixed.rs
docs/: DOCUMENTATION.md  DOCUMENTATION_ORGANIZATION.md  README.md
docs/api/: API.md  API_IMPROVEMENTS.md
docs/bindings/: PYTHON_BINDINGS.md
docs/bindings/go/: README.md
docs/bindings/javascript/: README.md
docs/bindings/python/: README.md
docs/community/: CONTRIBUTING.md  GOVERNANCE.md  GUIDELINES.md
docs/design/: EASE_OF_USE_IMPROVEMENTS.md  GENERIC_PLUGIN_DESIGN.md  TRAIT_DESIGN.md  performance.md  roadmap.md  runtime-abstraction.md  security-model.md
docs/feedback/: PUP_FEEDBACK_RESPONSE.md
docs/guides/: COMPONENT_MODEL.md  MIGRATION.md  STREAMING_APIS.md  basic-tutorial.md  basic-usage.md  benchmarks.md  cli-tools.md  development-setup.md  development-tools.md  error-handling.md  examples.md  extending.md  faq.md  hot-reload.md  http-servers.md  installation.md  mcp-servers.md  monitoring.md  multi-tenant-isolation.md  performance.md  plugin-development.md  production.md  resource-management.md  security-config.md  streaming-execution.md  troubleshooting.md
examples/: README.md  basic_usage.rs  cli_tool.wasm  cli_wrapper.rs  component_model.rs  ease_of_use_demo.rs  enhanced_api_demo.rs  file_processor.rs  http_server.rs  mcp_server.rs  plugin_ecosystem.rs  pup_feedback_complete_demo.rs  python_bindings.rs  streaming_data.rs  test_wasmer_runtime.rs
examples/languages/: README.md
examples/languages/rust/calculator/: Cargo.toml  README.md  example.rs
examples/languages/rust/calculator/src/: lib.rs
fixtures/: cli_tool_template.rs.txt  comm_test_module.wasm  comm_test_module.wat  generic_template.rs.txt  http_server_template.rs.txt  mcp_server_template.rs.txt  test_module.wat
src/: config.rs  error.rs  lib.rs  monitoring.rs  plugins.rs  simple.rs  streaming.rs
src/bindings/: mod.rs  python.rs
src/communication/: channels.rs  io.rs  memory.rs  memory_channel.rs  memory_fixed.rs  mod.rs  rpc.rs  streaming.rs
src/compiler/: cargo.rs  mod.rs  wasi.rs
src/runtime/: component.rs  mod.rs  wasm_common.rs  wasmer.rs  wasmtime.rs  wasmtime_backup.rs  wasmtime_new.rs
src/security/: audit.rs  audit_impl.rs  audit_impl.rs.bak  capabilities.rs  mod.rs  resource_limits.rs
src/templates/: cli.rs  cli_tool.rs  cli_tool.rs.bak  generic.rs  generic.rs.bak  http_server.rs  http_server_template.rs  mcp_server.rs  mcp_server.rs.bak  mod.rs
src/utils/: logging.rs  manifest.rs  mod.rs
src/wrappers/: cli_tool.rs  generic.rs  http_server.rs  http_server_impl.rs  mcp_server.rs  mod.rs
test_input/: test1.txt  test2.txt
test_output/: processed1.txt  processed2.txt
tests/: integration_test.rs  simplified_api_test.rs  trait_structure_test.rs
tests/integration/: sandbox_tests.rs
