[package]
name = "wasm-sandbox"
version = "0.1.0"
edition = "2021"
description = "A secure WebAssembly sandbox for running untrusted code with flexible host-guest communication"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ciresnave/wasm-sandbox"
repository = "https://github.com/ciresnave/wasm-sandbox"
documentation = "https://docs.rs/wasm-sandbox"
keywords = ["wasm", "webassembly", "sandbox", "security", "isolation"]
categories = ["wasm", "api-bindings", "virtualization"]
authors = ["Eric Evans <ciresnave@gmail.com>"]
exclude = [
    "target/*",
    "benches/*",
    "examples/*",
    "tests/*",
    ".git*",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "API.md",
    "TRAIT_DESIGN.md",
]

[dependencies]
# WebAssembly runtime
wasmtime = { version = "24.0.2", features = ["async", "cache", "cranelift"] }
wasmer = { version = "3.1.1", features = ["sys", "cranelift"], optional = true }
wasmer-wasi = { version = "3.1.1", optional = true }
wasi-common = "13.0.0"
wasmtime-wasi = "13.0.0"

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1.73"
futures = "0.3.28"
tokio-stream = "0.1.14"

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rmp-serde = "1.1.2"

# Error handling
thiserror = "1.0.47"
anyhow = "1.0.75"

# Logging and monitoring
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Security
cap-std = "2.0.0"
wasi-cap-std-sync = "13.0.0"

# Utilities
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tempfile = "3.8.0"
once_cell = "1.18.0"
dashmap = "5.5.3"
num_cpus = "1.15.0"

# Additional dependencies
rand = "0.8.5"
log = "0.4.20"
chrono = { version = "0.4.31", features = ["serde"] }
toml = "0.8.8"

# Windows compatibility fix for wasmer
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
mockall = "0.11.4"
rstest = "0.18.2"
tokio-test = "0.4.3"
ctrlc = "3.4.1"

[features]
default = ["wasmtime-runtime"]
wasmtime-runtime = []
wasmer-runtime = ["wasmer", "wasmer-wasi"]
all-runtimes = ["wasmtime-runtime", "wasmer-runtime"]

[[bench]]
name = "communication"
harness = false

[[bench]]
name = "startup"
harness = false
