[package]
name = "wasm-sandbox"
version = "0.4.1"
edition = "2024"
description = "A secure WebAssembly sandbox with dead-simple ease of use, progressive complexity APIs, and comprehensive safety controls"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ciresnave/wasm-sandbox"
repository = "https://github.com/ciresnave/wasm-sandbox"
documentation = "https://docs.rs/wasm-sandbox"
keywords = ["wasm", "webassembly", "sandbox", "security", "isolation"]
categories = ["wasm", "api-bindings", "virtualization"]
authors = ["Eric Evans <ciresnave@gmail.com>"]
exclude = [
    "target/*",
    "benches/*",
    "examples/*",
    "tests/*",
    ".git*",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "API.md",
    "TRAIT_DESIGN.md",
]

[dependencies]
# WebAssembly runtime
wasmtime = { version = "34.0.1", features = ["async", "cache", "cranelift", "component-model"] }
wasmtime-component-macro = "34.0.1"
wasmtime-component-util = "34.0.1"
wit-bindgen = "0.43.0"
wasmer = { version = "6.0.1", features = ["sys", "cranelift"], optional = true }
wasmer-wasix = { version = "0.600.1", optional = true }
wasi-common = "34.0.1"
wasmtime-wasi = "34.0.1"

# Security: Force minimum versions for security fixes
idna = "1.0.3"

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1.73"
futures = "0.3.28"
tokio-stream = "0.1.14"
async-stream = "0.3.5"

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rmp-serde = "1.1.2"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.75"

# Logging and monitoring
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Security
cap-std = "3.4.4"

# Utilities
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tempfile = "3.8.0"
once_cell = "1.18.0"
dashmap = "6.1.0"
num_cpus = "1.15.0"

# Additional dependencies
rand = "0.9.1"
log = "0.4.20"
chrono = { version = "0.4.31", features = ["serde"] }
toml = "0.9.2"

# Windows compatibility fix for wasmer
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async_tokio"] }
mockall = "0.13.1"
rstest = "0.25.0"
tokio-test = "0.4.3"
ctrlc = "3.4.1"

[features]
default = ["wasmtime-runtime"]
wasmtime-runtime = []
wasmer-runtime = ["wasmer", "wasmer-wasix"]
all-runtimes = ["wasmtime-runtime", "wasmer-runtime"]
component-model = []
python-bindings = []
streaming-apis = []

[[bench]]
name = "communication"
harness = false

[[bench]]
name = "startup"
harness = false
